src/interpreter/ProgramParser.java
/* ProgramParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. ProgramParser.java */
package interpreter;

import datatype.*;
import java.io.FileNotFoundException;

public class ProgramParser/*@bgen(jjtree)*/implements ProgramParserTreeConstants, ProgramParserConstants {/*@bgen(jjtree)*/
  protected JJTProgramParserState jjtree = new JJTProgramParserState();
  /**
  * input to program in string from
  */
  private static String stringInput;
  /**
  * input to program in data form
  */
  private static Data dataInput;
  /**
  * program code in a stringReader object
  */
  private static java.io.StringReader programCode;

  /**
  * command line call
  */
  public static void main(String[] args) throws ParseException, InterpreterException, inputparser.ParseException {
    if (args.length == 2) {
      ProgramParser parser = new ProgramParser(args);
      System.out.println(parser.runProgram().dataToString());
    } else {
      System.out.println("Call format: <path> <input>");
    }

  }

  /**
  * constructor for IDE (makes an object without args[] from main)
  */
  public ProgramParser(String prog, String input) {
    ProgramParser.programCode = new java.io.StringReader(prog);
    ProgramParser.stringInput = input;
    //System.out.println("Program: " + prog + " - input: " + programInput);
  }

  /**
  * constructor for cmd line
  */
  public ProgramParser(String[] args) throws InterpreterException {
    java.util.Scanner scanner;
    String text = "";
    try {
      scanner = new java.util.Scanner(new java.io.File(args[0]));
      text = scanner.useDelimiter("\u005c\u005cA").next();
      scanner.close();
      ProgramParser.programCode = new java.io.StringReader(text);
    } catch (FileNotFoundException ex) {
      throw new InterpreterException("FileNotFoundException", "Check file path.", ex.getMessage());
    }
    ProgramParser.stringInput = args[1];
  }

  /**
  * parse program
  */
  public ASTProgram parseProgram() throws ParseException {
    //make new AST node for program and launch parser (ASTProgram = root node)
    //System.out.println("programCode:" + programCode);
    ProgramParser parser = new ProgramParser(programCode);
    ASTProgram program = parser.program();
    //print AST
    //program.dump(""); //remove this at the end (or make feature)
    //if reach here, parsing was without errors
    return program;
  }

  /**
  * run program
  */
  public Data runProgram() throws ParseException, InterpreterException, inputparser.ParseException {
    //parse input
    dataInput = inputparser.InputParser.run(stringInput);
    //parse program + get parser
    ASTProgram program = parseProgram();
    //new interpreter (visitor)
    ProgramVisitor v = new ProgramVisitor();
    //initialiseRandomPopulation interpreter and accept first node, print result
    Data output = (Data) program.jjtAccept(v, null);
    return output;
  }

/**
* #Program
* gets progname, input, block, and output. Returns itself.
*/
  final public ASTProgram program() throws ParseException {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      progname();
      jj_consume_token(READ);
      input();
      block();
      jj_consume_token(WRITE);
      output();
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/**
* #progname
* puts name in node data
*/
  final public void progname() throws ParseException {/*@bgen(jjtree) progname */
                            ASTprogname jjtn000 = new ASTprogname(JJTPROGNAME);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(VAR);
jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
jjtn000.data.put("progname", t.image);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/**
* #input
* puts input var and input in node data
*/
  final public void input() throws ParseException {/*@bgen(jjtree) input */
                      ASTinput jjtn000 = new ASTinput(JJTINPUT);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(VAR);
jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
jjtn000.data.put("inputVar", t.image);
    jjtn000.data.put("input", dataInput);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/**
* #output
* puts output var in node data
*/
  final public void output() throws ParseException {/*@bgen(jjtree) output */
                        ASToutput jjtn000 = new ASToutput(JJTOUTPUT);
                        boolean jjtc000 = true;
                        jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(VAR);
jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
jjtn000.data.put("outputVar", t.image);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/**
* #Block
* gets statements
*/
  final public void block() throws ParseException {/*@bgen(jjtree) Block */
  ASTBlock jjtn000 = new ASTBlock(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(25);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case WHILE:
      case IF:
      case SWITCH:
      case VAR:{
        statements();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(26);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/**
* statements
*/
  final public void statements() throws ParseException {
    command();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 27:{
      jj_consume_token(27);
      statements();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
  }

/**
* command
* creates a node from the command parsed
* nodes: #Assign, #Macro, #While, #If, #Switch
*/
  final public void command() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VAR:{
      if (jj_2_1(2147483647)) {
ASTAssign jjtn002 = new ASTAssign(JJTASSIGN);
      boolean jjtc002 = true;
      jjtree.openNodeScope(jjtn002);
        try {
          variable();
          jj_consume_token(ASSIGN);
ASTMacro jjtn001 = new ASTMacro(JJTMACRO);
                            boolean jjtc001 = true;
                            jjtree.openNodeScope(jjtn001);
          try {
            jj_consume_token(28);
            variable();
            jj_consume_token(29);
            expr();
          } catch (Throwable jjte001) {
if (jjtc001) {
                              jjtree.clearNodeScope(jjtn001);
                              jjtc001 = false;
                            } else {
                              jjtree.popNode();
                            }
                            if (jjte001 instanceof RuntimeException) {
                              {if (true) throw (RuntimeException)jjte001;}
                            }
                            if (jjte001 instanceof ParseException) {
                              {if (true) throw (ParseException)jjte001;}
                            }
                            {if (true) throw (Error)jjte001;}
          } finally {
if (jjtc001) {
                              jjtree.closeNodeScope(jjtn001, true);
                            }
          }
        } catch (Throwable jjte002) {
if (jjtc002) {
        jjtree.clearNodeScope(jjtn002);
        jjtc002 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte002 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte002;}
      }
      if (jjte002 instanceof ParseException) {
        {if (true) throw (ParseException)jjte002;}
      }
      {if (true) throw (Error)jjte002;}
        } finally {
if (jjtc002) {
        jjtree.closeNodeScope(jjtn002, true);
      }
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case VAR:{
ASTAssign jjtn003 = new ASTAssign(JJTASSIGN);
      boolean jjtc003 = true;
      jjtree.openNodeScope(jjtn003);
          try {
            variable();
            jj_consume_token(ASSIGN);
            expr();
          } catch (Throwable jjte003) {
if (jjtc003) {
        jjtree.clearNodeScope(jjtn003);
        jjtc003 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte003 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte003;}
      }
      if (jjte003 instanceof ParseException) {
        {if (true) throw (ParseException)jjte003;}
      }
      {if (true) throw (Error)jjte003;}
          } finally {
if (jjtc003) {
        jjtree.closeNodeScope(jjtn003, true);
      }
          }
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
      }
    case WHILE:{
ASTWhile jjtn004 = new ASTWhile(JJTWHILE);
     boolean jjtc004 = true;
     jjtree.openNodeScope(jjtn004);
      try {
        jj_consume_token(WHILE);
        expr();
        block();
      } catch (Throwable jjte004) {
if (jjtc004) {
       jjtree.clearNodeScope(jjtn004);
       jjtc004 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte004 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte004;}
     }
     if (jjte004 instanceof ParseException) {
       {if (true) throw (ParseException)jjte004;}
     }
     {if (true) throw (Error)jjte004;}
      } finally {
if (jjtc004) {
       jjtree.closeNodeScope(jjtn004, true);
     }
      }
      break;
      }
    case IF:{
ASTIf jjtn005 = new ASTIf(JJTIF);
     boolean jjtc005 = true;
     jjtree.openNodeScope(jjtn005);
      try {
        jj_consume_token(IF);
        expr();
        block();
        if (jj_2_2(2147483647)) {
          jj_consume_token(ELSE);
          block();
        } else {
          ;
        }
      } catch (Throwable jjte005) {
if (jjtc005) {
       jjtree.clearNodeScope(jjtn005);
       jjtc005 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte005 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte005;}
     }
     if (jjte005 instanceof ParseException) {
       {if (true) throw (ParseException)jjte005;}
     }
     {if (true) throw (Error)jjte005;}
      } finally {
if (jjtc005) {
       jjtree.closeNodeScope(jjtn005, true);
     }
      }
      break;
      }
    case SWITCH:{
ASTSwitch jjtn006 = new ASTSwitch(JJTSWITCH);
     boolean jjtc006 = true;
     jjtree.openNodeScope(jjtn006);
      try {
        jj_consume_token(SWITCH);
        expr();
        jj_consume_token(25);
        label_1:
        while (true) {
          rule();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case CASE:{
            ;
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            break label_1;
          }
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DEFAULTCASE:{
          defaultCase();
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        jj_consume_token(26);
      } catch (Throwable jjte006) {
if (jjtc006) {
       jjtree.clearNodeScope(jjtn006);
       jjtc006 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte006 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte006;}
     }
     if (jjte006 instanceof ParseException) {
       {if (true) throw (ParseException)jjte006;}
     }
     {if (true) throw (Error)jjte006;}
      } finally {
if (jjtc006) {
       jjtree.closeNodeScope(jjtn006, true);
     }
      }
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**
* #Case
* creates a case node with an ExprList and a Block
*/
  final public void rule() throws ParseException {/*@bgen(jjtree) Case */
  ASTCase jjtn000 = new ASTCase(JJTCASE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CASE);
ASTExprList jjtn001 = new ASTExprList(JJTEXPRLIST);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
      try {
        exprList();
      } catch (Throwable jjte001) {
if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
             jjtree.closeNodeScope(jjtn001, true);
           }
      }
      jj_consume_token(30);
ASTBlock jjtn002 = new ASTBlock(JJTBLOCK);
                                   boolean jjtc002 = true;
                                   jjtree.openNodeScope(jjtn002);
      try {
        statements();
      } catch (Throwable jjte002) {
if (jjtc002) {
                                     jjtree.clearNodeScope(jjtn002);
                                     jjtc002 = false;
                                   } else {
                                     jjtree.popNode();
                                   }
                                   if (jjte002 instanceof RuntimeException) {
                                     {if (true) throw (RuntimeException)jjte002;}
                                   }
                                   if (jjte002 instanceof ParseException) {
                                     {if (true) throw (ParseException)jjte002;}
                                   }
                                   {if (true) throw (Error)jjte002;}
      } finally {
if (jjtc002) {
                                     jjtree.closeNodeScope(jjtn002, true);
                                   }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/**
* #DefaultCase
* creates 
*/
  final public void defaultCase() throws ParseException {/*@bgen(jjtree) DefaultCase */
  ASTDefaultCase jjtn000 = new ASTDefaultCase(JJTDEFAULTCASE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DEFAULTCASE);
      jj_consume_token(30);
ASTBlock jjtn001 = new ASTBlock(JJTBLOCK);
                      boolean jjtc001 = true;
                      jjtree.openNodeScope(jjtn001);
      try {
        statements();
      } catch (Throwable jjte001) {
if (jjtc001) {
                        jjtree.clearNodeScope(jjtn001);
                        jjtc001 = false;
                      } else {
                        jjtree.popNode();
                      }
                      if (jjte001 instanceof RuntimeException) {
                        {if (true) throw (RuntimeException)jjte001;}
                      }
                      if (jjte001 instanceof ParseException) {
                        {if (true) throw (ParseException)jjte001;}
                      }
                      {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001, true);
                      }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/**
* expr
* checks if expr is an equality #Equal
*/
  final public void expr() throws ParseException {Token t;
    if (jj_2_3(2147483647)) {
ASTEqual jjtn001 = new ASTEqual(JJTEQUAL);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        expr2();
        jj_consume_token(31);
        expr();
      } catch (Throwable jjte001) {
if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ASSIGN:
      case WHILE:
      case IF:
      case CONS:
      case NIL:
      case HD:
      case TL:
      case ATOM:
      case BOOLEAN:
      case VAR:
      case NUM:
      case 32:
      case 34:{
        expr2();
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/**
* expr2
* cannot be an equality
* nodes: #nil, #Cons, #Hd, #Tl, var, #num, #bool, #ExprList, #atom
*/
  final public void expr2() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NIL:{
ASTnil jjtn001 = new ASTnil(JJTNIL);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(NIL);
      } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
      }
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      if (jj_2_4(2147483647)) {
ASTCons jjtn002 = new ASTCons(JJTCONS);
      boolean jjtc002 = true;
      jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(CONS);
          expr();
          expr();
        } catch (Throwable jjte002) {
if (jjtc002) {
        jjtree.clearNodeScope(jjtn002);
        jjtc002 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte002 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte002;}
      }
      if (jjte002 instanceof ParseException) {
        {if (true) throw (ParseException)jjte002;}
      }
      {if (true) throw (Error)jjte002;}
        } finally {
if (jjtc002) {
        jjtree.closeNodeScope(jjtn002, true);
      }
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CONS:{
          t = jj_consume_token(CONS);
ASTatom jjtn003 = new ASTatom(JJTATOM);
               boolean jjtc003 = true;
               jjtree.openNodeScope(jjtn003);
          try {
jjtree.closeNodeScope(jjtn003, true);
               jjtc003 = false;
jjtn003.data.put("atom", t.image);
          } finally {
if (jjtc003) {
                 jjtree.closeNodeScope(jjtn003, true);
               }
          }
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          if (jj_2_5(2147483647)) {
ASTHd jjtn004 = new ASTHd(JJTHD);
      boolean jjtc004 = true;
      jjtree.openNodeScope(jjtn004);
            try {
              jj_consume_token(HD);
              expr();
            } catch (Throwable jjte004) {
if (jjtc004) {
        jjtree.clearNodeScope(jjtn004);
        jjtc004 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte004 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte004;}
      }
      if (jjte004 instanceof ParseException) {
        {if (true) throw (ParseException)jjte004;}
      }
      {if (true) throw (Error)jjte004;}
            } finally {
if (jjtc004) {
        jjtree.closeNodeScope(jjtn004, true);
      }
            }
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case HD:{
              t = jj_consume_token(HD);
ASTatom jjtn005 = new ASTatom(JJTATOM);
             boolean jjtc005 = true;
             jjtree.openNodeScope(jjtn005);
              try {
jjtree.closeNodeScope(jjtn005, true);
             jjtc005 = false;
jjtn005.data.put("atom", t.image);
              } finally {
if (jjtc005) {
               jjtree.closeNodeScope(jjtn005, true);
             }
              }
              break;
              }
            default:
              jj_la1[11] = jj_gen;
              if (jj_2_6(2147483647)) {
ASTTl jjtn006 = new ASTTl(JJTTL);
      boolean jjtc006 = true;
      jjtree.openNodeScope(jjtn006);
                try {
                  jj_consume_token(TL);
                  expr();
                } catch (Throwable jjte006) {
if (jjtc006) {
        jjtree.clearNodeScope(jjtn006);
        jjtc006 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte006 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte006;}
      }
      if (jjte006 instanceof ParseException) {
        {if (true) throw (ParseException)jjte006;}
      }
      {if (true) throw (Error)jjte006;}
                } finally {
if (jjtc006) {
        jjtree.closeNodeScope(jjtn006, true);
      }
                }
              } else {
                switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case TL:{
                  t = jj_consume_token(TL);
ASTatom jjtn007 = new ASTatom(JJTATOM);
             boolean jjtc007 = true;
             jjtree.openNodeScope(jjtn007);
                  try {
jjtree.closeNodeScope(jjtn007, true);
             jjtc007 = false;
jjtn007.data.put("atom", t.image);
                  } finally {
if (jjtc007) {
               jjtree.closeNodeScope(jjtn007, true);
             }
                  }
                  break;
                  }
                case VAR:{
                  variable();
                  break;
                  }
                case NUM:{
                  t = jj_consume_token(NUM);
ASTnum jjtn008 = new ASTnum(JJTNUM);
              boolean jjtc008 = true;
              jjtree.openNodeScope(jjtn008);
                  try {
jjtree.closeNodeScope(jjtn008, true);
              jjtc008 = false;
jjtn008.data.put("num", t.image);
                  } finally {
if (jjtc008) {
                jjtree.closeNodeScope(jjtn008, true);
              }
                  }
                  break;
                  }
                case BOOLEAN:{
                  t = jj_consume_token(BOOLEAN);
ASTbool jjtn009 = new ASTbool(JJTBOOL);
                  boolean jjtc009 = true;
                  jjtree.openNodeScope(jjtn009);
                  try {
jjtree.closeNodeScope(jjtn009, true);
                  jjtc009 = false;
jjtn009.data.put("boolean", t.image);
                  } finally {
if (jjtc009) {
                    jjtree.closeNodeScope(jjtn009, true);
                  }
                  }
                  break;
                  }
                case 32:{
ASTExprList jjtn010 = new ASTExprList(JJTEXPRLIST);
     boolean jjtc010 = true;
     jjtree.openNodeScope(jjtn010);
                  try {
                    jj_consume_token(32);
                    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                    case ASSIGN:
                    case WHILE:
                    case IF:
                    case CONS:
                    case NIL:
                    case HD:
                    case TL:
                    case ATOM:
                    case BOOLEAN:
                    case VAR:
                    case NUM:
                    case 32:
                    case 34:{
                      exprList();
                      break;
                      }
                    default:
                      jj_la1[7] = jj_gen;
                      ;
                    }
                    jj_consume_token(33);
                  } catch (Throwable jjte010) {
if (jjtc010) {
       jjtree.clearNodeScope(jjtn010);
       jjtc010 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte010 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte010;}
     }
     if (jjte010 instanceof ParseException) {
       {if (true) throw (ParseException)jjte010;}
     }
     {if (true) throw (Error)jjte010;}
                  } finally {
if (jjtc010) {
       jjtree.closeNodeScope(jjtn010, true);
     }
                  }
                  break;
                  }
                case ASSIGN:
                case WHILE:
                case IF:
                case ATOM:{
                  switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                  case ATOM:{
